--- a/uefi/env/MyAppPkg/BootLoader/kernel/Makefile
+++ b/uefi/env/MyAppPkg/BootLoader/kernel/Makefile
@@ -13,6 +13,10 @@
 #
 #***************************************************/
 
+CFLAGS := -mcmodel=large -fno-builtin -fno-stack-protector -fno-pie -fno-pic -fno-common -std=gnu89 -nostartfiles -Wno-address-of-packed-member -m64
+
+ASFLAGS := --64
+
 all: system_tmp kallsyms.o
 	ld -b elf64-x86-64 -z muldefs -o system head.o entry.o main.o printk.o trap.o memory.o interrupt.o task.o sys.o syscalls.o kallsyms.o -T Kernel.lds 
 	objcopy -I elf64-x86-64 -S -R ".eh_frame" -R ".comment" -O binary system kernel.bin
@@ -22,35 +26,35 @@ system_tmp: head.o entry.o main.o printk.o trap.o memory.o interrupt.o task.o sy
 
 head.o:	head.S
 	gcc -E  head.S > head.s
-	as --64 -o head.o head.s
+	as $(ASFLAGS) -o head.o head.s
 
 entry.o: entry.S
 	gcc -E  entry.S > entry.s
-	as --64 -o entry.o entry.s
+	as $(ASFLAGS) -o entry.o entry.s
 	
 main.o:	main.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c main.c
+	gcc  $(CFLAGS) -c main.c
 	
 printk.o: printk.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c printk.c
+	gcc  $(CFLAGS) -c printk.c
 
 trap.o: trap.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c trap.c
+	gcc  $(CFLAGS) -c trap.c
 
 memory.o: memory.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c memory.c
+	gcc  $(CFLAGS) -c memory.c
 
 interrupt.o: interrupt.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c interrupt.c
+	gcc  $(CFLAGS) -c interrupt.c
 	
 task.o: task.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c task.c	
+	gcc  $(CFLAGS) -c task.c
 
 sys.o: sys.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c sys.c	
+	gcc  $(CFLAGS) -c sys.c	
 
 syscalls.o: syscalls.c
-	gcc  -mcmodel=large -fno-builtin -m64 -c syscalls.c	
+	gcc  $(CFLAGS) -c syscalls.c	
 
 kallsyms.o: kallsyms.c system_tmp
 	gcc -o kallsyms kallsyms.c
