--- a/xv6_uefi/xv6_public/Makefile
+++ b/xv6_uefi/xv6_public/Makefile
@@ -11,7 +11,6 @@ OBJS = \
 	lapic.o\
 	log.o\
 	main.o\
-	mp.o\
 	picirq.o\
 	pipe.o\
 	proc.o\
@@ -27,7 +26,18 @@ OBJS = \
 	uart.o\
 	vectors.o\
 	vm.o\
-
+	mp_uefi.o\
+	debug.o\
+	graphic.o\
+	font.o\
+	pci.o\
+	i8254.o\
+	arp.o\
+	eth.o\
+	ipv4.o\
+	icmp.o\
+	tcp.o\
+	http.o\
 # Cross-compiling (e.g., on Mac OS X)
 # TOOLPREFIX = i386-jos-elf
 
@@ -83,6 +93,7 @@ ASFLAGS = -m32 -gdwarf-2 -Wa,-divide
 # FreeBSD ld wants ``elf_i386_fbsd''
 LDFLAGS += -m $(shell $(LD) -V | grep elf_i386 2>/dev/null | head -n 1)
 
+
 xv6.img: bootblock kernel fs.img
 	dd if=/dev/zero of=xv6.img count=10000
 	dd if=bootblock of=xv6.img conv=notrunc
@@ -117,6 +128,7 @@ kernel: $(OBJS) entry.o entryother initcode kernel.ld
 	$(LD) $(LDFLAGS) -T kernel.ld -o kernel entry.o $(OBJS) -b binary initcode entryother
 	$(OBJDUMP) -S kernel > kernel.asm
 	$(OBJDUMP) -t kernel | sed '1,/SYMBOL TABLE/d; s/ .* / /; /^$$/d' > kernel.sym
+	cp kernel ../image/.
 
 # kernelmemfs is a copy of kernel that maintains the
 # disk image in memory instead of writing to a disk.
@@ -129,7 +141,6 @@ kernelmemfs: $(MEMFSOBJS) entry.o entryother initcode kernel.ld fs.img
 	$(LD) $(LDFLAGS) -T kernel.ld -o kernelmemfs entry.o  $(MEMFSOBJS) -b binary initcode entryother fs.img
 	$(OBJDUMP) -S kernelmemfs > kernelmemfs.asm
 	$(OBJDUMP) -t kernelmemfs | sed '1,/SYMBOL TABLE/d; s/ .* / /; /^$$/d' > kernelmemfs.sym
-
 tags: $(OBJS) entryother.S _init
 	etags *.S *.c
 
@@ -184,7 +195,7 @@ clean:
 	rm -f *.tex *.dvi *.idx *.aux *.log *.ind *.ilg \
 	*.o *.d *.asm *.sym vectors.S bootblock entryother \
 	initcode initcode.out kernel xv6.img fs.img kernelmemfs mkfs \
-	xv6memfs.img mkfs .gdbinit \
+	.gdbinit \
 	$(UPROGS)
 
 # make a printout
