--- a/xv6_uefi/xv6_public/Makefile
+++ b/xv6_uefi/xv6_public/Makefile
@@ -83,7 +83,7 @@ endif
 
 CC = $(TOOLPREFIX)gcc
 AS = $(TOOLPREFIX)gas
-LD = $(TOOLPREFIX)ld -Map kernel_.map --verbose
+LD = $(TOOLPREFIX)ld # -Map kernel_.map --verbose
 OBJCOPY = $(TOOLPREFIX)objcopy
 OBJDUMP = $(TOOLPREFIX)objdump
 CFLAGS = -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -Wno-array-bounds -Wno-error=infinite-recursion
